# poem-web-rev-01

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  fix-symlink.py  run.sh  {{project-name|kebab_case}}.toml
backoffice/: Cargo.toml  package-lock.json
backoffice/asset/css/: tailwind.css
backoffice/asset/embed/css/: main.css  main.min.css
backoffice/asset/embed/js/: main.js  main.min.js
backoffice/asset/embed_hidden/icon/: note.txt
backoffice/asset/embed_hidden/import_map/: import_map.dev.min.json
backoffice/asset/embed_hidden/js/: boot.js
backoffice/asset/embed_locale/en-GB/: home.ftl  login.ftl  shorty-form.ftl  shorty-route.ftl  stack.ftl  top.ftl  user-form.ftl  user-route.ftl  validate.ftl
backoffice/src/: lib.rs
backoffice/src/common/: mod.rs
backoffice/src/common/cache/: mod.rs
backoffice/src/common/html/: context_html.rs  mod.rs  validate.rs
backoffice/src/common/icon/: mod.rs
backoffice/src/common/js/: mod.rs
backoffice/src/home/: mod.rs
backoffice/src/shorty/: mod.rs
backoffice/src/shorty/form/: add_edit_url_form.rs  mod.rs
backoffice/src/shorty/model/: mod.rs  shorty_model.rs
backoffice/src/shorty/repository/: mod.rs  shorty_repository.rs
backoffice/src/shorty/route/: mod.rs  shorty.rs
backoffice/src/shorty/rule/: mod.rs  url_path.rs  url_redirect.rs
backoffice/src/shorty/service/: add_url_service.rs  delete_url_service.rs  edit_url_service.rs  list_url_service.rs  mod.rs
backoffice/src/stack/model/: mod.rs  stack_model.rs
backoffice/src/stack/repository/: mod.rs  stack_repository.rs
backoffice/src/stack/route/: mod.rs  stack.rs
backoffice/src/stack/service/: mod.rs  stack_service.rs
backoffice/src/user/: mod.rs
backoffice/src/user/form/: add_user.rs  edit_password_manager.rs  edit_user.rs  login.rs  mod.rs
backoffice/src/user/layer/: mod.rs  password_layer.rs
backoffice/src/user/locale/: login.rs  user.rs
backoffice/src/user/model/: mod.rs  user_manager_model.rs  user_model.rs
backoffice/src/user/pointer/: mod.rs  user_pointer.rs
backoffice/src/user/repository/: mod.rs  user_manager_repository.rs  user_repository.rs
backoffice/src/user/role/: mod.rs  user_role_check.rs  visitor_only.rs
backoffice/src/user/route/: login.rs  user.rs
backoffice/src/user/rule/: login.rs  mod.rs  user_manager.rs
backoffice/src/user/service/: mod.rs  user_check_service.rs  user_login_service.rs
public/: Cargo.toml  package-lock.json  run_minify.py  run_tailwind.py
public/asset/css/: tailwind.css
public/asset/embed/css/: main.css  main.min.css
public/asset/embed/js/: main.js  main.min.js
public/asset/embed_hidden/import_map/: import_map.prod.json
public/asset/embed_hidden/js/: boot.min.js
public/asset/embed_locale/en-GB/: home.ftl
public/src/: lib.rs
public/src/common/: mod.rs
public/src/common/embed/: mod.rs
public/src/common/html/: mod.rs
public/src/common/js/: mod.rs
public/src/common/locale/: mod.rs
public/src/home/route/: mod.rs
public/src/shorty/: mod.rs
public/src/shorty/model/: url.rs
public/src/shorty/repository/: mod.rs  shorty.rs
public/src/shorty/route/: shorty.rs
public/src/shorty/rule/: mod.rs  shorty_path.rs
public/src/shorty/service/: fetch_url_service.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/adapter/: mod.rs
shared/src/config/: mod.rs  poem.rs
shared/src/context/: mod.rs
shared/src/csrf/: mod.rs
shared/src/db/: mod.rs
shared/src/db/_sql/: add_user.sql  init.sql
shared/src/error/: mod.rs
shared/src/flag/: mod.rs  path_edit.rs
shared/src/flash/: mod.rs
shared/src/htmx/: mod.rs  response.rs
shared/src/locale/: mod.rs
shared/src/log/: mod.rs
shared/src/password/: mod.rs
shared/src/query_string/: form.rs  mod.rs  serde_qs_config.rs
shared/src/request_cache/: mod.rs
shared/src/utils/: mod.rs
shared/src/utils/db/: mod.rs
(+67 files in other folders)
